--- a/.env.testing
+++ b/.env.testing
@@ -2,7 +2,8 @@ APP_NAME=Laravel
 APP_ENV=testing
 APP_KEY=base64:CfFzKGtOyc9pqK3x2KQ8HqED4+s84P1gUAnpuXYbWlA=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://forum.test
+
 
 LOG_CHANNEL=stack
 
