--- a/.env.testing
+++ b/.env.testing
@@ -8,11 +8,11 @@ APP_URL=http://forum.test
 LOG_CHANNEL=stack
 
 DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
+DB_HOST=127.0.0.1
+DB_PORT=3306
 DB_DATABASE=:memory:
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
